# cronwave

./: .gitignore  .taskrc  Cargo.toml  LICENSE  README.md  index.html  schedule.yaml  school.ics  tasks.yaml  uuids.txt
cronwave-lib/: Cargo.toml
cronwave-lib/src/: structs.rs
src/: .gitignore  blockin.json  config.rs  ical.rs  main.rs  oauth2.rs  schedule.rs  schooler.ics  schoolerer.ics  structs.rs  ui.rs  uuids.txt  whentomeet.rs
