[package]
name = "cronwave"
version = "0.1.0"
edition = "2021"
[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-task-scheduler = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
uuid = "1.17.0"
iso8601 = "0.6.3"
iso8601-duration = "0.2.0"
ical = "0.11.0"
toml = "0.9.5"
confy = "1.0.0"
icalendar = "0.17.1"
chrono-tz = "0.10.4"
rrule = "0.14.0"
clap_derive = { version = "4.0.0-rc.1" }
clap = "4.5.45"
oauth2 = "5.0.0"
ratatui = {version="0.29.0", features=["widget-calendar"]}
crossterm = "0.29.0"
color-eyre = "0.6.5"
itertools = "0.14.0"
scraper = "0.24.0"
regex = "1.11.2"
inquire = "0.7.5"

